final fixes, tags, nth-child, overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -45,7 +45,7 @@ html {
 }
 
 .header-content {
-    max-width: 1200px;
+    max-width: 1170px;
     color: #ffffff;
     font-size: 1.2rem;
     z-index: 2;
@@ -121,8 +121,6 @@ html {
     width: 390px;
     height: 590px;
     background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
     margin: 0 auto;
     padding: 50px 25px;
     font-size: 1.4rem;
@@ -136,13 +134,11 @@ html {
 .popup__hidden::before {
     content: "";
     position: fixed;
-    background-color: #000000;
-    opacity: 0.6;
+    background-color: rgba(0, 0, 0, 0.5);
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
 }
 
 .popup__hidden>.feedback-title {
@@ -226,8 +222,8 @@ html {
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 60px auto 0;
-    max-width: 1200px;
-    padding: 0 15px;
+    max-width: 1170px;
+    padding: 0 20px;
 }
 
 .trands .aside-title-link,
@@ -303,7 +299,7 @@ html {
     display: flex;
 }
 
-.posts-item:nth-child(1n+2) {
+.posts-item:nth-child(n+2) {
     margin-top: 60px;
 }
 
@@ -332,7 +328,7 @@ html {
     line-height: 1.1;
 }
 
-.post-tags-items:nth-child(1n+2) {
+.post-tags-items:nth-child(n+2) {
     margin-left: 15px;
 }
 
@@ -377,7 +373,7 @@ html {
     margin-bottom: 15px;
 }
 
-.post-text>p:nth-child(1n+2) {
+.post-text>p:nth-child(n+2) {
     margin-top: 16px;
 }
 
@@ -397,7 +393,7 @@ html {
     margin-bottom: 45px;
 }
 
-.aside-widget:nth-child(1n+2) {
+.aside-widget:nth-child(n+2) {
     margin-top: 60px;
 }
 
@@ -415,7 +411,7 @@ html {
     display: flex;
 }
 
-.aside-post-item:nth-child(1n+2) {
+.aside-post-item:nth-child(n+2) {
     margin-top: 20px;
 }
 
@@ -543,7 +539,7 @@ html {
     border-bottom: 1px solid #eeeeee;
 }
 
-.aside-themes-item:nth-child(1n+2) {
+.aside-themes-item:nth-child(n+2) {
     margin-top: 25px;
 }
 
@@ -631,7 +627,7 @@ html {
 }
 
 .footer-wrap {
-    max-width: 1200px;
+    max-width: 1170px;
     margin: auto;
     padding: 0 15px;
 }
@@ -651,7 +647,7 @@ html {
     list-style: none;
 }
 
-.socials-item:nth-child(1n+2) {
+.socials-item:nth-child(n+2) {
     margin-left: 25px;
 }
 
@@ -711,7 +707,7 @@ html {
     .trands-item {
         width: 49.7%;
     }
-    .trands-item:nth-child(1n+3) {
+    .trands-item:nth-child(n+4) {
         margin-top: 5px;
     }
     .main-content {
@@ -720,7 +716,7 @@ html {
     .products-item {
         width: 48%;
     }
-    .products-item:nth-child(1n+3) {
+    .products-item:nth-child(n+3) {
         margin-top: 25px;
     }
 }
@@ -744,7 +740,7 @@ html {
     .trands-item {
         width: 100%;
     }
-    .trands-item:nth-child(1n+2) {
+    .trands-item:nth-child(n+3) {
         margin-top: 5px;
     }
     .trands-item-wrap {
@@ -757,15 +753,21 @@ html {
         width: 100%;
         margin-top: 45px;
     }
+    .aside-tags-items>.aside-tags-item {
+        margin: 5px;
+    }
     .products-item {
         width: 100%;
     }
-    .products-item:nth-child(1n+2) {
+    .products-item:nth-child(n+3) {
         margin-top: 25px;
     }
 }
 
 @media screen and (min-width: 360px) and (max-width: 1199px) {
+    .main-wrap {
+        padding: 0 40px;
+    }
     .posts-item {
         flex-direction: column;
     }
